--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
