--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   dots_indicator: ^3.0.0
   firebase_core: ^3.9.0
+  firebase_auth: ^5.4.0
 
 dev_dependencies:
   flutter_test:
