--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dots_indicator: ^3.0.0
   firebase_core: ^3.9.0
   firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.1
 
 dev_dependencies:
   flutter_test:
