Checkout page complete, bkash gateway added and cash on delivery feature added to the collection in firebase database

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.9.0
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
+  bkash: ^0.0.2
 
 dev_dependencies:
   flutter_test:
